@@ -1,16 +1,14 @@
-##########################################
+*****************************************
 TYPO3 Extension for Untis Vertretungsplan
-##########################################
+*****************************************
 
-****************
 What does it do?
-****************
+================
 
 This Extension for TYPO3 parses a Vertretungsplan generated out of the `Untis Software <http://www.grupet.at/de/produkte/untis/uebersicht_untis.php>`_.
 
-************
 Installation
-************
+============
 
 Simply Install the Extension and include the static TypoScript.
 The default path for the Vertretungsplan's files is fileadmin/Untis/ but you can adapt it to your preferred path in TypoScript with the constant
@@ -25,9 +23,8 @@ determines whether the news for the day are shown or not. Sometimes it is not de
 
 Just include the frontend Plugin "Vertretungsplan" and upload the Untis-generated files and the content will be shown in the frontend.
 
-========
 Fakeweek
-========
+--------
 
 With the TypoScript Option
 
@@ -36,9 +33,8 @@ With the TypoScript Option
 you are able to simulate a specific week of the year.
 Instead of the current one the contents of this week's vertretungsplan is parsed
 
-================================================
 Number of days to be shown for the upcoming week
-================================================
+------------------------------------------------
 
 The TypoScript Option
 
@@ -47,25 +43,23 @@ The TypoScript Option
 sets the number of days that are shown for the next week. The default value is set to 7 - but may be adjusted to any value between 0 (not displaying anything for the next week) and 7 (show all entries for the next week).
 Maybe setting this to 2 is a good value.
 
-****************
 Why not Extbase?
-****************
+================
 
 Extbase is cool! Really. But it would nowadays be the total overkill for this small Extension, so I decided to do it in the oldschool piBase way.
 
-***********
 Development
-***********
+===========
 
 The development and sourcecode management is done with git and currently on GitHub. Feel free to clone this Extension or to send me pull requests.
 The repository can be found `here <https://github.com/ipf/Vertretungsplan>`_.
 
-As soon as the TYPO3 forge is able to handle git repositories, the development will be moved to `forge <http://forge.typo3.org>`_.
+As soon as the TYPO3 forge is able to handle git repositories, the development will be moved to `forge <http://forge.typo3.org/projects/extension-vertretungsplan>`_.
 
-****
 Todo
-****
+====
 
 * Awareness of year-changes
 * Format messages of the day and remove the crappy table-stuff from them
 * Add caching via Caching Framework
+* Maybe convert it to Extbase ...
